--- a/app/Artist/app/src/main/res/layout/activity_camera.xml
+++ b/app/Artist/app/src/main/res/layout/activity_camera.xml
@@ -1,118 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark"
+    android:background="#fff"
+    android:orientation="vertical"
     tools:context=".PresentationLayer.CameraActivity">
 
-    <FrameLayout
+    <RelativeLayout
         android:id="@+id/camera_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_weight="1">
+        <!---->
         <FrameLayout
             android:id="@+id/camera_preview"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
-        <!--<SurfaceView-->
-            <!--android:id="@+id/filter_switch"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"/>-->
-    </FrameLayout>
 
-    <LinearLayout
-        android:id="@+id/home_custom_top_relative"
-        android:layout_width="match_parent"
-        android:layout_height="44dp"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:layout_alignParentTop="true"
-        >
+        <RelativeLayout
+            android:id="@+id/home_custom_top_relative"
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
-        <!--<ImageView-->
-            <!--android:id="@+id/camera_frontback"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_weight="1"-->
-            <!--android:padding="10dp"-->
-            <!--android:src="@drawable/btn_camera_turn_n" />-->
+            <ImageView
+                android:id="@+id/img_camera_switch"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_toLeftOf="@+id/img_camera_setting"
+                android:src="@drawable/ic_switch_camera_black_24dp"
+                android:alpha="0.5"/>
 
-    </LinearLayout>
+            <ImageView
+                android:id="@+id/img_camera_setting"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"
+                android:src="@drawable/ic_settings_black_24dp"
+                android:alpha="0.5"/>
+        </RelativeLayout>
+        <!---->
+    </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/bottom_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_alignParentBottom="true"
-        >
-        <LinearLayout
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+        android:layout_height="match_parent"
+        android:layout_weight="3">
+        <!---->
+        <ImageView
+            android:id="@+id/img_gallery_switch"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="20dp">
-            <ImageView
-                android:id="@+id/img_gallery_switch"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#000"  />
-        </LinearLayout>
-        <!--<ImageView-->
-            <!--android:id="@+id/img_gallery_switch"-->
-            <!--android:layout_width="60dp"-->
-            <!--android:layout_height="60dp"-->
-            <!--android:layout_alignParentLeft="true"-->
-            <!--android:layout_marginLeft="20dp"-->
-            <!--android:src="@drawable/ic_icon_gallery" />-->
+            android:layout_marginHorizontal="20dp"
+            android:background="#000"  />
+
         <ImageView
             android:id="@+id/img_take_photo"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_centerInParent="true"
             android:src="@drawable/ic_svg_take_photo" />
-        <ImageView
-                android:id="@+id/img_camera_switch"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:layout_toLeftOf="@+id/img_camera_setting"
-                android:layout_marginRight="20dp"
-                android:src="@drawable/ic_switch_camera" />
 
-        <ImageView
-            android:id="@+id/img_camera_setting"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+        <LinearLayout
+            android:id="@+id/score_text_area"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
             android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="20dp"
-            android:src="@drawable/ic_settings_black_24dp" />
-
+            android:layout_marginHorizontal="20dp"
+            android:layout_alignParentLeft="true"
+            android:alpha="0.8">
+            <TextView
+                android:id="@+id/score_text"
+                android:layout_width="wrap_content"
+                android:layout_height="25dp"
+                android:layout_marginRight="20dp"
+                android:background="#fff"
+                android:gravity="center"
+                android:textColor="#EDDD2F"
+                android:text="xxx score:100"/>
+            <TextView
+                android:id="@+id/score_text2"
+                android:background="#fff"
+                android:layout_width="wrap_content"
+                android:layout_height="25dp"
+                android:gravity="center"
+                android:textColor="#EDDD2F"
+                android:text="xxx score:100"/>
+        </LinearLayout>
+    <!---->
     </RelativeLayout>
 
-    <LinearLayout
-        android:id="@+id/score_text_area"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:layout_marginLeft="20dp"
-        android:layout_above="@id/bottom_layout"
-        android:orientation="vertical"
-        android:alpha="0.8"
-        android:background="@color/colorPrimaryDark">
-        <TextView
-            android:id="@+id/score_text"
-            android:layout_width="match_parent"
-            android:layout_height="25dp"
-
-            android:text="xxx score:"/>
-        <TextView
-            android:id="@+id/score_text2"
-            android:layout_width="match_parent"
-            android:layout_height="25dp"
-
-            android:text="xxx score:"/>
-
-    </LinearLayout>
-
-</RelativeLayout>
+</LinearLayout>
