--- a/app/Artist/app/src/main/res/layout/activity_camera.xml
+++ b/app/Artist/app/src/main/res/layout/activity_camera.xml
@@ -80,20 +80,12 @@
             <TextView
                 android:id="@+id/score_text"
                 android:layout_width="wrap_content"
-                android:layout_height="25dp"
+                android:layout_height="wrap_content"
                 android:layout_marginRight="20dp"
                 android:background="#fff"
                 android:gravity="center"
                 android:textColor="#EDDD2F"
-                android:text="xxx score:100"/>
-            <TextView
-                android:id="@+id/score_text2"
-                android:background="#fff"
-                android:layout_width="wrap_content"
-                android:layout_height="25dp"
-                android:gravity="center"
-                android:textColor="#EDDD2F"
-                android:text="xxx score:100"/>
+                android:text="LOADING..."/>
         </LinearLayout>
     <!---->
     </RelativeLayout>
