--- a/app/Artist/app/src/main/res/layout/activity_gallery.xml
+++ b/app/Artist/app/src/main/res/layout/activity_gallery.xml
@@ -4,11 +4,146 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PresentationLayer.GalleryActivity">
+    tools:context=".PresentationLayer.StyleMigrationActivity"
+    android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/imgshow"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="50dp"
+        android:layout_weight="1">
+        <ImageView
+            android:id="@+id/style_backto"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="10dp"
+            android:src="@drawable/ic_keyboard_arrow_left"/>
+        <ImageView
+            android:id="@+id/style_close"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="10dp"
+            android:src="@drawable/ic_close_black"/>
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#EBEBEB"
+        android:orientation="vertical"
+        android:layout_weight="6">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            android:padding="5dp"
+            android:orientation="horizontal"
+            android:layout_weight="1"
+            tools:ignore="NestedWeights">
+            <ImageView
+                android:id="@+id/style_oldphoto"
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="5dp"
+                android:background="#5C8BC34A"
+                android:layout_weight="1"
+                tools:ignore="NestedWeights" />
+            <ImageView
+                android:id="@+id/style_targetphoto"
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="#5C8BC34A"
+                android:src="@drawable/ic_add_circle_outline_black_24dp"
+                android:alpha="0.5"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            android:orientation="horizontal"
+            android:padding="5dp"
+            android:layout_weight="1">
+            <ImageView
+                android:id="@+id/style_newphoto"
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="5dp"
+                android:background="#5C8BC34A"
+                android:layout_weight="1"
+                android:src="@drawable/ic_send_black_24dp"
+                android:alpha="0.5"/>
+            <LinearLayout
+                android:id="@+id/style_newphoto_info"
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_margin="5dp"
+                android:gravity="center"
+                android:background="#5C8BC34A"
+                android:layout_gravity="center"
+
+                android:layout_weight="1">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:gravity="center"
+                    android:text="xxxxxx"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:gravity="center"
+                    android:text="xxxxxx"/>
+            </LinearLayout>
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_weight="1">
+
+        <ImageView
+            android:id="@+id/style_photo_poem"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="10dp"
+            android:src="@drawable/ic_poem"/>
+
+        <Button
+            android:id="@+id/style_photo_newscore"
+            android:layout_width="wrap_content"
+            android:layout_height="24dp"
+            android:layout_centerVertical="true"
+            android:layout_toStartOf="@id/style_photo_save"
+            android:layout_marginEnd="10dp"
+            android:background="#06BD17"
+            android:text="Evaluate"
+            android:textColor="#fff"
+            android:typeface="serif"
+            />
+
+        <Button
+            android:id="@+id/style_photo_save"
+            android:layout_width="wrap_content"
+            android:layout_height="24dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="10dp"
+            android:background="#06BD17"
+            android:text="Save"
+            android:textColor="#fff"
+            android:typeface="serif"
+            />
+    </RelativeLayout>
+
 
 </LinearLayout>
