--- a/app/Artist/app/src/main/res/layout/activity_photo.xml
+++ b/app/Artist/app/src/main/res/layout/activity_photo.xml
@@ -40,6 +40,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="20dp"
+        android:background="#EBEBEB"
         android:layout_weight="6">
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/pager"
@@ -82,23 +83,10 @@
             android:layout_width="wrap_content"
             android:layout_height="24dp"
             android:layout_centerVertical="true"
-            android:layout_toLeftOf="@id/onephoto_photo_select"
+            android:layout_alignParentEnd="true"
             android:layout_marginRight="10dp"
             android:background="#06BD17"
             android:text="Evaluate"
-            android:textColor="#fff"
-            android:typeface="serif"
-            />
-
-        <Button
-            android:id="@+id/onephoto_photo_select"
-            android:layout_width="wrap_content"
-            android:layout_height="24dp"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="10dp"
-            android:background="#06BD17"
-            android:text="Select"
             android:textColor="#fff"
             android:typeface="serif"
             />
