--- a/app/Artist/app/src/main/res/layout/activity_gallery.xml
+++ b/app/Artist/app/src/main/res/layout/activity_gallery.xml
@@ -76,30 +76,13 @@
                 android:layout_weight="1"
                 android:src="@drawable/ic_send_black_24dp"
                 android:alpha="0.5"/>
-            <LinearLayout
-                android:id="@+id/style_newphoto_info"
+            <ImageView
+                android:id="@+id/style_newphoto_get"
                 android:layout_width="fill_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
                 android:layout_margin="5dp"
-                android:gravity="center"
                 android:background="#5C8BC34A"
-                android:layout_gravity="center"
-
-                android:layout_weight="1">
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:gravity="center"
-                    android:text="xxxxxx"/>
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:gravity="center"
-                    android:text="xxxxxx"/>
-            </LinearLayout>
+                android:layout_weight="1" />
         </LinearLayout>
 
     </LinearLayout>
