--- a/app/Artist/app/src/main/res/layout/activity_photo.xml
+++ b/app/Artist/app/src/main/res/layout/activity_photo.xml
@@ -12,11 +12,19 @@
         android:layout_height="50dp"
         android:layout_weight="1">
         <ImageView
+            android:id="@+id/onephoto_photo_info"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:src="@drawable/ic_info_outline_black"/>
+        <ImageView
             android:id="@+id/onephoto_backtogallery"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
+            android:visibility="gone"
             android:src="@drawable/ic_keyboard_arrow_left"/>
         <ImageView
             android:id="@+id/onephoto_gallery"
@@ -25,11 +33,12 @@
             android:layout_centerVertical="true"
             android:layout_toRightOf="@id/onephoto_backtogallery"
             android:layout_marginLeft="10dp"
-            android:src="@drawable/ic_photo_album"/>
+            android:src="@drawable/ic_photo_album"
+            android:visibility="gone"/>
         <ImageView
             android:id="@+id/onephoto_close"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
             android:layout_marginRight="10dp"
@@ -48,49 +57,51 @@
             android:layout_height="match_parent" />
     </LinearLayout>
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="75dp"
+        android:orientation="horizontal"
+        android:gravity="center"
         android:layout_weight="1">
-        <ImageView
-            android:id="@+id/onephoto_photo_info"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
-            android:src="@drawable/ic_info_outline_black"/>
+        <!--<ImageView-->
+            <!--android:id="@+id/onephoto_photo_info"-->
+            <!--android:layout_width="24dp"-->
+            <!--android:layout_height="24dp"-->
+            <!--android:layout_centerVertical="true"-->
+            <!--android:layout_marginLeft="10dp"-->
+            <!--android:src="@drawable/ic_info_outline_black"/>-->
 
         <ImageView
             android:id="@+id/onephoto_photo_new_style"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_centerVertical="true"
-            android:layout_toRightOf="@id/onephoto_photo_info"
+            android:layout_alignParentStart="true"
             android:layout_marginLeft="10dp"
+            android:layout_weight="1"
             android:src="@drawable/ic_switch_pattern"/>
 
         <ImageView
             android:id="@+id/onephoto_photo_poem"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_centerVertical="true"
             android:layout_toRightOf="@id/onephoto_photo_new_style"
             android:layout_marginLeft="10dp"
+            android:layout_weight="1"
             android:src="@drawable/ic_poem"/>
 
-        <Button
+        <ImageView
             android:id="@+id/onephoto_photo_newscore"
-            android:layout_width="wrap_content"
-            android:layout_height="24dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_centerVertical="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginRight="10dp"
-            android:background="#06BD17"
-            android:text="Evaluate"
-            android:textColor="#fff"
-            android:typeface="serif"
+            android:layout_toRightOf="@id/onephoto_photo_new_style"
+            android:layout_marginLeft="10dp"
+            android:layout_weight="1"
+            android:src="@drawable/ic_circle_black_24dp"
             />
-    </RelativeLayout>
+    </LinearLayout>
 
 
 </LinearLayout>
