--- a/app/Artist/app/src/main/res/layout/activity_edit_finish.xml
+++ b/app/Artist/app/src/main/res/layout/activity_edit_finish.xml
@@ -16,7 +16,7 @@
         android:gravity="center_horizontal"
         android:layout_weight="1">
         <ImageView
-            android:id="@+id/photo"
+            android:id="@+id/finish_imageview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@drawable/sample"
@@ -30,11 +30,11 @@
         android:orientation="horizontal"
         android:gravity="center">
         <ImageView
-            android:id="@+id/edit_finish_share"
+            android:id="@+id/edit_finish_save"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginHorizontal="10dp"
-            android:src="@drawable/ic_share_black_24dp"/>
+            android:src="@drawable/ic_save_black_24dp"/>
         <ImageView
             android:id="@+id/edit_finish_back_home"
             android:layout_width="40dp"
