--- a/app/Artist/app/src/main/res/layout/activity_photo.xml
+++ b/app/Artist/app/src/main/res/layout/activity_photo.xml
@@ -79,6 +79,7 @@
             android:layout_alignParentStart="true"
             android:layout_marginLeft="10dp"
             android:layout_weight="1"
+            android:visibility="gone"
             android:src="@drawable/ic_switch_pattern"/>
 
         <ImageView
@@ -89,18 +90,19 @@
             android:layout_toRightOf="@id/onephoto_photo_new_style"
             android:layout_marginLeft="10dp"
             android:layout_weight="1"
+            android:visibility="gone"
             android:src="@drawable/ic_poem"/>
 
-        <ImageView
-            android:id="@+id/onephoto_photo_newscore"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_centerVertical="true"
-            android:layout_toRightOf="@id/onephoto_photo_new_style"
-            android:layout_marginLeft="10dp"
-            android:layout_weight="1"
-            android:src="@drawable/ic_circle_black_24dp"
-            />
+<!--        <ImageView-->
+<!--            android:id="@+id/onephoto_photo_newscore"-->
+<!--            android:layout_width="50dp"-->
+<!--            android:layout_height="50dp"-->
+<!--            android:layout_centerVertical="true"-->
+<!--            android:layout_toRightOf="@id/onephoto_photo_new_style"-->
+<!--            android:layout_marginLeft="10dp"-->
+<!--            android:layout_weight="1"-->
+<!--            android:src="@drawable/ic_circle_black_24dp"-->
+<!--            />-->
 
         <Button
             android:id="@+id/onephoto_newscore"
