--- a/app/Artist/app/src/main/res/layout/activity_pic_edit.xml
+++ b/app/Artist/app/src/main/res/layout/activity_pic_edit.xml
@@ -7,27 +7,46 @@
     android:layout_height="match_parent"
     tools:context=".PresentationLayer.PicEditActivity">
 
+    <ImageView
+        android:id="@+id/processed_photo"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_gravity="center"
+        android:layout_marginBottom="150dp"
+        android:background="#f5f5f5"
+        android:scaleType="fitCenter"
+        android:src="@drawable/sample"
+        app:layout_constraintBottom_toTopOf="@+id/nav_view"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_margin="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        app:backgroundTint="#fff"
+        app:layout_constraintBottom_toTopOf="@+id/fragment_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/check" />
+
     <FrameLayout
         android:id="@+id/fragment_content"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1">
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="160dp"
-            android:src="@drawable/check"
-            app:backgroundTint="#fff"
-
-            app:pressedTranslationZ="20dp"
-            android:scaleType="center"
-            app:borderWidth="10dp"
-            app:fabSize="normal"/>
-
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="55dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:foregroundGravity="center"
+        app:layout_constraintTop_toBottomOf="@+id/processed_photo">
 
     </FrameLayout>
 
@@ -36,15 +55,12 @@
         android:id="@+id/nav_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="0dp"
-        android:layout_marginStart="0dp"
         android:background="?android:attr/windowBackground"
+        app:itemTextColor="@drawable/nav_word"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:itemTextColor="@drawable/nav_word"
-        app:menu="@menu/navigation"/>
-
-
+        app:layout_constraintTop_toBottomOf="@+id/processed_photo"
+        app:menu="@menu/navigation" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
