--- a/app/Artist/app/src/main/res/layout/fragment_base_edit.xml
+++ b/app/Artist/app/src/main/res/layout/fragment_base_edit.xml
@@ -6,94 +6,39 @@
     android:gravity="start"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/photo"
-        android:layout_width="match_parent"
-        android:layout_height="500dp"
-        android:src="@drawable/sample"
-        android:layout_gravity="center"
-        android:scaleType="fitCenter"
-        android:background="#f5f5f5"/>
-
-
     <HorizontalScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:layout_below="@+id/photo">
+        android:padding="10dp">
 
-    <RadioGroup
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <RadioButton
-            android:id="@+id/filter_0"
-            android:button="@null"
+        <RadioGroup
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:drawableTop="@drawable/edit_0_pressed"
-            android:text="裁剪"
-            android:textColor="@drawable/nav_word"
-            android:gravity="center"
-            android:layout_marginRight="10dp"/>
+            android:orientation="horizontal">
 
-        <RadioButton
-            android:id="@+id/filter_1"
-            android:button="@null"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawableTop="@drawable/edit_1_pressed"
-            android:text="旋转/翻转"
-            android:textColor="@drawable/nav_word"
-            android:gravity="center"
-            android:layout_marginRight="10dp"/>
+            <RadioButton
+                android:id="@+id/crop"
+                android:button="@null"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableTop="@drawable/edit_0_pressed"
+                android:text="裁剪"
+                android:textColor="@drawable/nav_word"
+                android:gravity="center"
+                android:layout_marginRight="10dp"/>
 
-        <RadioButton
-            android:id="@+id/filter_2"
-            android:button="@null"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawableTop="@drawable/edit_2_pressed"
-            android:text="亮度"
-            android:textColor="@drawable/nav_word"
-            android:gravity="center"
-            android:layout_marginRight="10dp"/>
+            <RadioButton
+                android:id="@+id/style_edit"
+                android:button="@null"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableTop="@drawable/edit_2_pressed"
+                android:text="亮度"
+                android:textColor="@drawable/nav_word"
+                android:gravity="center"
+                android:layout_marginRight="10dp"/>
 
-        <RadioButton
-            android:id="@+id/filter_3"
-            android:button="@null"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawableTop="@drawable/edit_3_pressed"
-            android:text="对比度"
-            android:textColor="@drawable/nav_word"
-            android:gravity="center"
-            android:layout_marginRight="10dp"/>
-
-        <RadioButton
-            android:id="@+id/filter_4"
-            android:button="@null"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawableTop="@drawable/edit_4_pressed"
-            android:text="饱和度"
-            android:textColor="@drawable/nav_word"
-            android:gravity="center"
-            android:layout_marginRight="10dp"/>
-
-        <RadioButton
-            android:id="@+id/filter_5"
-            android:button="@null"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawableTop="@drawable/edit_5_pressed"
-            android:text="锐化"
-            android:textColor="@drawable/nav_word"
-            android:gravity="center"
-            android:layout_marginRight="10dp"/>
-
-    </RadioGroup>
+        </RadioGroup>
 
     </HorizontalScrollView>
 </RelativeLayout>
