--- a/app/Artist/app/src/main/res/layout/fragment_filter.xml
+++ b/app/Artist/app/src/main/res/layout/fragment_filter.xml
@@ -6,119 +6,19 @@
     android:gravity="start"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/photo"
-        android:layout_width="match_parent"
-        android:layout_height="500dp"
-        android:src="@drawable/sample"
-        android:layout_gravity="center"
-        android:scaleType="fitCenter"
-        android:background="#f5f5f5"/>
-
-
     <HorizontalScrollView
+        android:id="@+id/filter_scroll_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:layout_below="@+id/photo">
+        android:padding="10dp">
 
             <RadioGroup
+                android:id="@+id/filter_button_group"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <RadioButton
-                    android:id="@+id/filter_0"
-                    android:button="@null"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:drawableTop="@drawable/filter_0_pressed"
-                    android:text="原图"
-                    android:textColor="@drawable/nav_word"
-                    android:gravity="center"
-                    android:layout_marginRight="10dp"
-                    android:checked="true"/>
-
-                <RadioButton
-                    android:id="@+id/filter_1"
-                    android:button="@null"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:drawableTop="@drawable/filter_1_pressed"
-                    android:text="早安"
-                    android:textColor="@drawable/nav_word"
-                    android:gravity="center"
-                    android:layout_marginRight="10dp"/>
-
-                <RadioButton
-                    android:id="@+id/filter_2"
-                    android:button="@null"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:drawableTop="@drawable/filter_2_pressed"
-                    android:text="清纯"
-                    android:textColor="@drawable/nav_word"
-                    android:gravity="center"
-                    android:layout_marginRight="10dp"/>
-
-                <RadioButton
-                    android:id="@+id/filter_3"
-                    android:button="@null"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:drawableTop="@drawable/filter_3_pressed"
-                    android:text="草莓"
-                    android:textColor="@drawable/nav_word"
-                    android:gravity="center"
-                    android:layout_marginRight="10dp"/>
-
-                <RadioButton
-                    android:id="@+id/filter_4"
-                    android:button="@null"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:drawableTop="@drawable/filter_4_pressed"
-                    android:text="夏威夷"
-                    android:textColor="@drawable/nav_word"
-                    android:gravity="center"
-                    android:layout_marginRight="10dp"/>
-
-                <RadioButton
-                    android:id="@+id/filter_5"
-                    android:button="@null"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:drawableTop="@drawable/filter_5_pressed"
-                    android:text="闪耀"
-                    android:textColor="@drawable/nav_word"
-                    android:gravity="center"
-                    android:layout_marginRight="10dp"/>
-
-                <RadioButton
-                    android:id="@+id/filter_6"
-                    android:button="@null"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:drawableTop="@drawable/filter_6_pressed"
-                    android:text="童话"
-                    android:textColor="@drawable/nav_word"
-                    android:gravity="center"
-                    android:layout_marginRight="10dp"/>
-
-                <RadioButton
-                    android:id="@+id/filter_7"
-                    android:button="@null"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:drawableTop="@drawable/filter_7_pressed"
-                    android:text="美味"
-                    android:textColor="@drawable/nav_word"
-                    android:gravity="center"
-                    android:layout_marginRight="10dp"/>
-
             </RadioGroup>
-
-
 
     </HorizontalScrollView>
 </RelativeLayout>
