--- a/app/Artist/app/src/main/res/layout/fragment_poem.xml
+++ b/app/Artist/app/src/main/res/layout/fragment_poem.xml
@@ -6,21 +6,10 @@
     android:gravity="start"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/photo"
-        android:layout_width="match_parent"
-        android:layout_height="500dp"
-        android:src="@drawable/sample"
-        android:layout_gravity="center"
-        android:scaleType="fitCenter"
-        android:background="#f5f5f5"/>
-
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:gravity="center"
-        android:layout_below="@+id/photo">
+        android:gravity="center">
 
         <Button
             android:id="@+id/btn_poem"
