--- a/app/Artist/app/src/main/res/layout/fragment_transfer.xml
+++ b/app/Artist/app/src/main/res/layout/fragment_transfer.xml
@@ -6,22 +6,12 @@
     android:gravity="start"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/photo"
-        android:layout_width="match_parent"
-        android:layout_height="500dp"
-        android:src="@drawable/sample"
-        android:layout_gravity="center"
-        android:scaleType="fitCenter"
-        android:background="#f5f5f5"/>
-
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:gravity="center"
-        android:orientation="vertical"
-        android:layout_below="@+id/photo">
+        android:orientation="vertical">
 
         <Button
             android:id="@+id/btn_trans"
