--- a/app/Artist/app/src/main/res/layout/activity_photo.xml
+++ b/app/Artist/app/src/main/res/layout/activity_photo.xml
@@ -112,7 +112,7 @@
             android:layout_toStartOf="@id/style_photo_save"
             android:layout_marginEnd="10dp"
             android:background="#3F51B5"
-            android:text="score"
+            android:text="@string/photo_bottom_score"
             android:textColor="#fff"
             android:textSize="20dp"
             android:typeface="serif"
@@ -126,7 +126,7 @@
             android:layout_toStartOf="@id/style_photo_save"
             android:layout_marginEnd="10dp"
             android:background="#E91E63"
-            android:text="delete"
+            android:text="@string/photo_bottom_delete"
             android:textColor="#fff"
             android:textSize="20dp"
             android:typeface="serif"
@@ -140,7 +140,7 @@
             android:layout_toStartOf="@id/style_photo_save"
             android:layout_marginEnd="10dp"
             android:background="#06BD17"
-            android:text="Edit"
+            android:text="@string/photo_bottom_edit"
             android:textColor="#fff"
             android:textSize="20dp"
             android:typeface="serif"
