--- a/app/Artist/app/src/main/res/layout/activity_style_migration.xml
+++ b/app/Artist/app/src/main/res/layout/activity_style_migration.xml
@@ -59,6 +59,7 @@
                 android:background="#5C8BC34A"
                 android:src="@drawable/ic_add_circle_outline_black_24dp"
                 android:alpha="0.5"/>
+
         </LinearLayout>
 
         <LinearLayout
@@ -109,7 +110,7 @@
             android:layout_toStartOf="@id/style_photo_save"
             android:layout_marginEnd="10dp"
             android:background="#06BD17"
-            android:text="Evaluate"
+            android:text="@string/style_migration_evaluate"
             android:textColor="#fff"
             android:typeface="serif"
             />
@@ -122,7 +123,7 @@
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="10dp"
             android:background="#06BD17"
-            android:text="Save"
+            android:text="@string/style_migration_save"
             android:textColor="#fff"
             android:typeface="serif"
             />
