--- a/app/Artist/app/src/main/res/layout/custom_dialog_layout.xml
+++ b/app/Artist/app/src/main/res/layout/custom_dialog_layout.xml
@@ -13,7 +13,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="15sp"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/colorAccent"
             android:gravity="center"
             android:padding="12dp"
             android:layout_centerInParent="true"
@@ -28,9 +28,10 @@
     </RelativeLayout>
 
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:gravity="center">
 
 
 
@@ -40,8 +41,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/colorAccent"
             android:textSize="15sp"
-            android:text="确定"
-            android:layout_centerHorizontal="true"/>
+            android:text="确定" />
 
         <Button
             android:id="@+id/dialog_btn_cancel"
@@ -49,10 +49,8 @@
             android:layout_height="wrap_content"
             android:textColor="@color/colorAccent"
             android:textSize="15sp"
-            android:text="取消"
-            android:layout_centerHorizontal="true"
-            android:layout_alignParentRight="true"/>
+            android:text="取消" />
 
-    </RelativeLayout>
+    </LinearLayout>
 
 </LinearLayout>
